terraform/main_infra_ecs/ecs-sg.tf
resource "aws_security_group" "ecs_tasks" {
  name   = "ecs-security-group"
  vpc_id = "${aws_vpc.company.id}"
 
  ingress {
   protocol         = "-1"
   from_port        = 0
   to_port          = 0
   cidr_blocks      = ["0.0.0.0/0"]
   ipv6_cidr_blocks = ["::/0"]
  }
  egress {
   protocol         = "-1"
   from_port        = 0
   to_port          = 0
   cidr_blocks      = ["0.0.0.0/0"]
   ipv6_cidr_blocks = ["::/0"]
  }
}
